# raw_emg_aug_tsgm

./: .gitignore  LICENSE  Makefile  README.md  legacy_keras_enable.sh  pyproject.toml  tox.ini
manual_tests/: cgan1_vis.py  test_tsgm.py
raw_emg_aug_tsgm/data_augmentation/: tsgm_augmenter_wrapper.py  tsgm_nn_augmenter_wrapper.py  tsgm_wrapper.py
raw_emg_aug_tsgm/data_augmentation/model_factories/: cgan_factory.py  conditional_model_factory.py  cvae_factory.py  model_factory.py
raw_emg_aug_tsgm/estimators/: nn_model_estimator.py
raw_emg_aug_tsgm/estimators/model_factories/: classification_model_factory.py  model_factory.py
raw_emg_aug_tsgm/raw_signals/: tools.py
tests/data_augmentation/: raw_signals_augumenter_test.py  tsgm_augmenter_wrapper_test.py  tsgm_nn_augmenter_wrapper_test.py  tsgm_wrapper_test.py
tests/data_augmentation/model_factories/: cgan_factory_test.py  cvae_factory_test.py  model_factory_test.py
tests/estimators/: nn_model_estimator_test.py
tests/estimators/model_factories/: classification_model_factory_test.py
tests/raw_signals/: tools_test.py
